# super-breakout

./: .gitignore  README.md  main.py  properties.py  pyproject.toml  tests.py  utils.py
command/: CollisionDetectedCommand.py  DeleteBallVectorCommand.py  DeleteDestroyedCommand.py  MoveBallCommand.py  MovePaddleCommand.py  ShiftBallDirectionCommand.py  __init__.py
controllers/: GameStateController.py  __init__.py
database/: database.db  database.py
interface/: UserInterface.py
layer/: BallLayer.py  Layer.py  PaddleLayer.py  ScoreLayer.py  SoundLayer.py  TileLayer.py  __init__.py
mode/: CavityMode.py  ClassicMode.py  GameMode.py  GameModeObserver.py  MenuGameMode.py  MessageGameMode.py  PlayGameMode.py  PlayerNameInput.py  PlayerNameInputMode.py  ProgressiveMode.py  ScoreboardMode.py  __init__.py
models/: Ball.py  GameObject.py  Tile.py  __init__.py  player_model.py
state/: Ball.py  GameItem.py  GameState.py  GameStateDeprecated.py  GameStateObserver.py  Paddle.py  Tile.py  __init__.py  properties.py
tests/: test.py
views/: GameView.py  MenuView.py  __init__.py  app.py
