[tool.poetry]
name = "Simon"
version = "0.1.0"
description = "Simon game implemented in python"
authors = ["guistaub <guistaub999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
